package v1.entities;

public class Expense {
}
