package v1.enums;

public enum Category {
    FOOD,
    TRANSPORT,
    HOUSING,
    LEISURE,
    HEALTH,
    OTHER;
}
